# kindred

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  LICENSE.md  README.md  RESPONSIBLE_USE.md
backend/: pyproject.toml
backend/kindred/: __init__.py  auth.py  config.py  daemon.py  database.py  llm.py  main.py  notifications.py  rate_limits.py  schemas.py
backend/kindred.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth.py  test_characters.py  test_daemon.py  test_lore.py  test_messages.py  test_notifications.py  test_rate_limits.py  test_system.py
config/: defaults.json
data/seed/: characters.json
docker/: Caddyfile.example  Dockerfile  compose.domain.yml  compose.example.local.yml  compose.tailscale.yml  compose.vapid.yml  compose.yml
docs/: ARCHITECTURE.md  AUTHENTICATION.md  BACKUP_RESTORE.md  CHARACTER_CARDS.md  CLOUD_BACKENDS.md  DEVELOPMENT.md  DOCKER_COMPOSE.md  EXAMPLE_CHARACTERS.md  INSTALL_MAC.md  INSTALL_RASPBERRY_PI.md  LOCAL_MODELS.md  LORE_FACTS.md  MODEL_RECOMMENDATIONS.md  NOTIFICATIONS.md  NOTIFICATION_TESTING.md  RATE_LIMITING.md  ROADMAP.md  character_card.schema.json  fact_pack.schema.json
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  api.ts  styles.css  types.ts  utils.tsx
frontend/src/components/: Avatar.tsx  (+4 more)
frontend/tests/: kindred.spec.ts
scripts/: dev.sh  generate_vapid_keys.py  mock_ollama.py  smoke_test.py  start.sh  test.sh  test_notifications.py
(+12 files in other folders)
