[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "kindred"
version = "0.1.0"
description = "Local-first character chat backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "python-multipart>=0.0.12,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
notifications = ["pywebpush>=2.0,<3", "py-vapid>=1.9,<2"]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["kindred*"]

